--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     var iframe = document.getElementById('myFrame');
     
     // Set the source URL for the iframe
-    var url = 'https://najib-tni.cbkgardens.com/'; //
+    var url = 'https://najib-sakithati.cbkgardens.com/'; //
     iframe.src = url;
 </script>
